Fix: Label Spacing

--- a/admin-core/assets/src/settings-app/components/tools-page/VersionControl.scss
+++ b/admin-core/assets/src/settings-app/components/tools-page/VersionControl.scss
@@ -15,7 +15,7 @@
     grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
 	row-gap: 25px;
 	column-gap: 25px;
-	margin-bottom: 25px;
+	margin-bottom: 35px;
 	.uag-version-control__element{
 		display: flex;
     	flex-direction: column;
